#add_subdirectory(3DAudioAnimator)
add_subdirectory(convert2mp3)
add_subdirectory(audio2image)
#add_subdirectory(Sampler-qt)
#add_subdirectory(Biano)
#add_subdirectory(AnalogPiano)

#add_subdirectory(AudioSynth)
#add_subdirectory(AudioSynth2)
add_subdirectory(AudioSynth-qt)

#add_subdirectory(MIDI-PianoMasterKeyboard88)
#add_subdirectory(RtMidi_test)

#add_subdirectory(MIDI-Instrument-Piano-wx)
#add_subdirectory(vlc-glfw)
#add_subdirectory(vlc-qt)
#add_subdirectory(vlc-qt)
#add_subdirectory(vlc-wx)

# add_subdirectory(Canvas3D-qt)
# add_subdirectory(fpscube-native)
# add_subdirectory(file2header)
# add_subdirectory(MP_FullScreen_glfw)
# add_subdirectory(TinyVLC)

